# GitGetter

./: .gitignore  Cargo.toml  README.md  download.json  repos.json
Executable/: repos.json
src/: main.rs
