[package]
name = "GitGetter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"]}
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1.44.1", features = ["full"] }
async-recursion = "1.0"
zip = "=4.5.0"

