[package]
name = "GitGetter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.23", features = ["json"]}
serde = {version = "1", features = ["derive"]}
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.143"
zip = "=4.5.0"
futures = "0.3"

[profile.release]
lto = true
opt-level = "z"  # Optimize for size
panic = "abort"  # Reduce panic handling code